# dolby_vision_professional_decoder_plugin

./: COPYRIGHT.txt  README.md
gstreamer_example/: gstdvprodecoder.c  gstdvprodecoder.h
gstreamer_example/test/: gstdvprodecodertest.cpp
hevc_ffmpeg_plugin/: CMakeLists.txt  ffmpeg_readme.txt
videodecoder_ffmpeg_plugin/: dvpd_vid_dec_plugin.h  ffmpeg_readme.txt  ffmpeg_vid_dec_plugin.c
